@@ -49,17 +49,18 @@ test_browser::do_get_resource(const std::string & uri)
             this->url_ = str;
         }
 
-        virtual const std::string url() const throw ()
+    private:
+        virtual const std::string do_url() const throw ()
         {
             return this->url_;
         }
 
-        virtual const std::string type() const throw ()
+        virtual const std::string do_type() const throw ()
         {
             return "application/octet-stream";
         }
 
-        virtual bool data_available() const throw ()
+        virtual bool do_data_available() const throw ()
         {
             return !!(*this);
         }
